testsuite/tests/typecheck/should_fail/T18640a.stderr

T18640a.hs:11:1: error: [GHC-25897]
    • Couldn't match kind ‘a’ with ‘*’
      Expected: forall (b :: k). * -> *
        Actual: forall (b :: k). * -> a
      ‘a’ is a rigid type variable bound by
        the type family declaration for ‘F2’
        at T18640a.hs:11:17
    • In the type family declaration for ‘F2’
